# solana-daily-snapshot

./: .env.example  .gitignore  README.md  pyproject.toml  snapshot.db
.github/workflows/: daily-snapshot.yml
config/: settings.yaml
scripts/: _ci_state.sh  run_daily.py
src/: __init__.py  config.py  db.py  discord_client.py  solana_client.py
src/daily_snapshot/: __init__.py  collector.py  formatter.py  image_renderer.py  job.py  jp_translator.py  x_client.py
src/jp_translator/: core.py
